[package]
name = "sync53"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
aws-config = "1.5.6"
aws-sdk-route53 = { version = "1.46.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.18", features = ["derive"] }
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["full"] }
